# porto-data

./: .bumpversion.cfg  .cursorrules  .gitignore  .npmignore  .pre-commit-config.yaml  BUGBOT.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  PORTO_ID_MAPPING.md  README.md  index.d.ts  index.js  metadata.json  package.json  porto_id_normalization_plan.md  pyproject.toml  pytest.ini
.cursor/rules/: catalog-layering-doctrine.mdc  git-no-auto-commit.mdc  karpathy-guidelines.mdc
.github/workflows/: porto-data-validation.yml  publish.yml  validate.yml  validation.yml
cli/: __init__.py  main.py
cli/commands/: __init__.py  metadata.py  validate.py
data/: data_links.json  dimensions.json  features.json  prices.json  products.json  restrictions.json  services.json  weight_tiers.json  zones.json
definitions/config/: cache-config.schema.json  datafactory-auth.schema.json  fallback-config.schema.json  features-config.schema.json  internetmarke-auth.schema.json  porto-config.schema.json  provider-auth.schema.json
definitions/enums/: letter-status.schema.json  letter-tracking-status.schema.json  letter-type.schema.json  registered-mail-type.schema.json  zone-id.schema.json
definitions/types/: address.schema.json  digital-stamp.schema.json  dimensions.schema.json  letter.schema.json  registered-mail.schema.json  stamp-request.schema.json  tracking-event.schema.json  tracking-status.schema.json  validation-result.schema.json
docs/: formats.md  id.md  identity-map.md  identity.md  mails.md  mark-profiles.md  marks.md  policy.md  porto_id.md  provider-template.md  resolution.md  tariff-verification.md
docs/providers/: deutschepost.md  laposte.md  swisspost.md  ukrposhta.md
hooks/: pre-commit
porto_data/: __init__.py  mappings.json  metadata.json  providers.json
porto_data/data/: data_links.json  dimensions.json  features.json  prices.json  products.json  restrictions.json  services.json  weight_tiers.json  zones.json
porto_data/formats/: envelopes.json  layouts.json
porto_data/global/: dimensions.json  jurisdictions.json  providers.json  restrictions.json
porto_data/policy/: jurisdictions.json  markets.json  restrictions.json
porto_data/providers/deutschepost/: execution.json  features.json  graph.json  integration.json  integrations.json  limits.json  marks.json  prices.json  products.json  services.json  weight_tiers.json  weights.json  zones.json
porto_data/providers/deutschepost/prices/: products.json  services.json
porto_data/providers/laposte/: features.json  graph.json  limits.json  marks.json  prices.json  products.json  services.json  weight_tiers.json  weights.json  zones.json
porto_data/providers/laposte/prices/: products.json  services.json
porto_data/providers/swisspost/: features.json  graph.json  limits.json  marks.json  prices.json  products.json  rules.json  services.json  weight_tiers.json  weights.json  zones.json
porto_data/providers/swisspost/prices/: products.json  services.json
porto_data/providers/ukrposhta/: features.json  graph.json  limits.json  marks.json  products.json  services.json  weights.json  zones.json
porto_data/providers/ukrposhta/prices/: products.json  services.json
porto_data/schemas/: data_links.schema.json  dimensions.schema.json  envelopes.schema.json  execution.schema.json  features.schema.json  graph.schema.json  integration.schema.json  integrations.schema.json  jurisdictions.schema.json  layouts.schema.json  limits.schema.json  mappings.schema.json  markets.schema.json  marks.schema.json  metadata.schema.json  porto_ids.schema.json  prices.schema.json  product_prices.schema.json  products.schema.json  providers.schema.json  restrictions.schema.json  rules.schema.json  service_prices.schema.json  services.schema.json  weight_tiers.schema.json  weights.schema.json  zones.schema.json
resources/: README.md
resources/ppl/: ppl_v590_PARTNER.csv
schemas/: data_links.schema.json  dimensions.schema.json  features.schema.json  prices.schema.json  products.schema.json  restrictions.schema.json  services.schema.json  weight_tiers.schema.json  zones.schema.json
scripts/: __init__.py  checksum_utils.py  data_files.py  format_json_file.py  generate_countries_reference.py  generate_metadata.py  utils.py  validate_data_links.py  validate_schemas.py
scripts/validators/: __init__.py  base.py  delivery.py  graph.py  helpers.py  limits_scope.py  links.py  mappings_layout.py  markets.py  porto_ids.py  products_delivery.py  providers_registry.py  schema.py
scripts/validators/graph/: __init__.py  constants.py  dependencies.py  edge_access.py  edges.py  envelope_geometry.py  execution_manifest.py  execution_semantics.py  integration_manifest.py  integrations_manifest.py  layouts.py  mark_edges.py  marks_profiles.py  price_lookup.py  provider_rules.py  runner.py  services.py  units.py  validator.py  wire_edges.py
tests/: __init__.py  conftest.py  minimal_fixtures.py  test_cli.py  test_cli_init.py  test_cli_main.py  test_cli_metadata.py  test_countries_reference.py  test_data_files.py  test_definitions_sync.py  test_delivery.py  test_execution_semantics.py  test_format_json_file.py  test_generate_metadata.py  test_generate_metadata_main.py  test_graph_cov_deps_execution.py  test_graph_cov_marks_provider_validator.py  test_graph_cov_services_units.py  test_graph_execution_manifest.py  test_graph_integration_manifest.py  test_graph_integrations_manifest.py  test_graph_marks_provider_validator.py  test_graph_package_coverage.py  test_graph_validator_branches.py  test_graph_wire_edges.py  test_limits_scope.py  test_mappings_layout.py  test_markets.py  test_markets_validator.py  test_path_implied_provider.py  test_porto_ids.py  test_products_delivery.py  test_providers_registry.py  test_publish.sh  test_utils.py  test_validate_data_links.py  test_validate_graph.py  test_validate_schemas.py  test_validators.py
