[project]
name = "gruncellka-porto-data"
version = "0.3.1"
description = "Schema-driven postal data model for providers, pricing, services and restrictions"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["postal", "post", "shipping", "logistics", "deutsche post", "swiss post", "la poste", "pricing", "postal rates", "zones", "restrictions", "data model", "schema", "sdk"]
classifiers = [
    "License :: OSI Approved :: Apache Software License 2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
authors = [
    {name = "Oleksandr Tsyba (gruncellka)"},
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/gruncellka/porto-data"
Repository = "https://github.com/gruncellka/porto-data"
Issues = "https://github.com/gruncellka/porto-data/issues"
Changelog = "https://github.com/gruncellka/porto-data/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "bump2version>=1.0.0",
    "pre-commit>=3.5.0",
    "ruff>=0.15.5",
    "mypy>=1.0.0",
    "jsonschema>=4.0.0",
    "types-jsonschema>=4.0.0",
    "types-toml>=0.10.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# PyPI package: data only (like npm). CLI/scripts stay in repo for development and CI.
packages = ["porto_data"]

[tool.setuptools.package-data]
porto_data = [
    "py.typed",
    "mappings.json",
    "metadata.json",
    "providers.json",
    "policy/*.json",
    "formats/*.json",
    "schemas/*.json",
    "providers/*/*.json",
    "providers/*/prices/*.json",
]

[tool.ruff]
line-length = 100
target-version = "py313"

# Enable formatting (replaces Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by ruff format)
]

[tool.ruff.lint.isort]
known-first-party = ["cli", "scripts"]

[tool.coverage.run]
omit = [
    "scripts/format_json_file.py",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
